# sudoku-solver

./: CMakeLists.txt  README.md
include/: Backtracker.h  Handler.h  Reader.h  Sudoku.h  SudokuConfig.h  SudokuHandler.h  constants.h
input/: input01.txt  input02.txt  input03.txt  input04.txt
src/: Backtracker.cpp  Handler.cpp  Reader.cpp  Sudoku.cpp  SudokuConfig.cpp  SudokuHandler.cpp
test/: main.cpp
